// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScopusDocTypesField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  genericSelectFieldId="rek-scopus-doc-type"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "ab - Abstract Report",
        "value": "ab",
      },
      Object {
        "text": "ar - Article",
        "value": "ar",
      },
      Object {
        "text": "ip - Article in Press",
        "value": "ip",
      },
      Object {
        "text": "bk - Book",
        "value": "bk",
      },
      Object {
        "text": "ch - Book Chapter",
        "value": "ch",
      },
      Object {
        "text": "bz - Business Article",
        "value": "bz",
      },
      Object {
        "text": "cp - Conference Paper",
        "value": "cp",
      },
      Object {
        "text": "cr - Conference Review",
        "value": "cr",
      },
      Object {
        "text": "ed - Editorial",
        "value": "ed",
      },
      Object {
        "text": "er - Erratum",
        "value": "er",
      },
      Object {
        "text": "le - Letter",
        "value": "le",
      },
      Object {
        "text": "no - Note",
        "value": "no",
      },
      Object {
        "text": "pr - Press Release",
        "value": "pr",
      },
      Object {
        "text": "rp - Report",
        "value": "rp",
      },
      Object {
        "text": "re - Review",
        "value": "re",
      },
      Object {
        "text": "sh - Short Survey",
        "value": "sh",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value={-1}
/>
`;

exports[`ScopusDocTypesField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-scopus-doc-type"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "ab - Abstract Report",
        "value": "ab",
      },
      Object {
        "text": "ar - Article",
        "value": "ar",
      },
      Object {
        "text": "ip - Article in Press",
        "value": "ip",
      },
      Object {
        "text": "bk - Book",
        "value": "bk",
      },
      Object {
        "text": "ch - Book Chapter",
        "value": "ch",
      },
      Object {
        "text": "bz - Business Article",
        "value": "bz",
      },
      Object {
        "text": "cp - Conference Paper",
        "value": "cp",
      },
      Object {
        "text": "cr - Conference Review",
        "value": "cr",
      },
      Object {
        "text": "ed - Editorial",
        "value": "ed",
      },
      Object {
        "text": "er - Erratum",
        "value": "er",
      },
      Object {
        "text": "le - Letter",
        "value": "le",
      },
      Object {
        "text": "no - Note",
        "value": "no",
      },
      Object {
        "text": "pr - Press Release",
        "value": "pr",
      },
      Object {
        "text": "rp - Report",
        "value": "rp",
      },
      Object {
        "text": "re - Review",
        "value": "re",
      },
      Object {
        "text": "sh - Short Survey",
        "value": "sh",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`ScopusDocTypesField component should render when given a default value field props 1`] = `
<GenericSelectField
  defaultValue="afr"
  error={false}
  errorText=""
  genericSelectFieldId="rek-scopus-doc-type"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "ab - Abstract Report",
        "value": "ab",
      },
      Object {
        "text": "ar - Article",
        "value": "ar",
      },
      Object {
        "text": "ip - Article in Press",
        "value": "ip",
      },
      Object {
        "text": "bk - Book",
        "value": "bk",
      },
      Object {
        "text": "ch - Book Chapter",
        "value": "ch",
      },
      Object {
        "text": "bz - Business Article",
        "value": "bz",
      },
      Object {
        "text": "cp - Conference Paper",
        "value": "cp",
      },
      Object {
        "text": "cr - Conference Review",
        "value": "cr",
      },
      Object {
        "text": "ed - Editorial",
        "value": "ed",
      },
      Object {
        "text": "er - Erratum",
        "value": "er",
      },
      Object {
        "text": "le - Letter",
        "value": "le",
      },
      Object {
        "text": "no - Note",
        "value": "no",
      },
      Object {
        "text": "pr - Press Release",
        "value": "pr",
      },
      Object {
        "text": "rp - Report",
        "value": "rp",
      },
      Object {
        "text": "re - Review",
        "value": "re",
      },
      Object {
        "text": "sh - Short Survey",
        "value": "sh",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`ScopusDocTypesField component should render with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-scopus-doc-type"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "ab - Abstract Report",
        "value": "ab",
      },
      Object {
        "text": "ar - Article",
        "value": "ar",
      },
      Object {
        "text": "ip - Article in Press",
        "value": "ip",
      },
      Object {
        "text": "bk - Book",
        "value": "bk",
      },
      Object {
        "text": "ch - Book Chapter",
        "value": "ch",
      },
      Object {
        "text": "bz - Business Article",
        "value": "bz",
      },
      Object {
        "text": "cp - Conference Paper",
        "value": "cp",
      },
      Object {
        "text": "cr - Conference Review",
        "value": "cr",
      },
      Object {
        "text": "ed - Editorial",
        "value": "ed",
      },
      Object {
        "text": "er - Erratum",
        "value": "er",
      },
      Object {
        "text": "le - Letter",
        "value": "le",
      },
      Object {
        "text": "no - Note",
        "value": "no",
      },
      Object {
        "text": "pr - Press Release",
        "value": "pr",
      },
      Object {
        "text": "rp - Report",
        "value": "rp",
      },
      Object {
        "text": "re - Review",
        "value": "re",
      },
      Object {
        "text": "sh - Short Survey",
        "value": "sh",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={-1}
/>
`;
